fixed nav alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,6 @@ article {
 .about-me h1 {
     font-size: 65px;
     text-align: left;
-    /* width: 20%; */
     float: left;
     padding-left: 30px;
     padding-right: 300px;
@@ -138,8 +137,6 @@ section .projects {
     float: left;
     font-size: 65px;
     text-align: left;
-    /* padding: 100px;
-    margin-right: 100px */
 }   
 
 .link1 {
@@ -161,7 +158,6 @@ section .projects {
 
 .container {
     display: flex;
-    /* justify-content: space-between; */
     flex-wrap: wrap;
     margin-left: 15%;
     max-width: 45%;
